--- a/index.html
+++ b/index.html
@@ -55,7 +55,9 @@
                 <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/android-phonejpg.jpg')"></div>
                 <div class="col-lg-6 my-auto showcase-text">
                     <h2>Sensor Research</h2>
-                    <p class="lead mb-0">Research goes here</p>
+                    <p class="lead mb-0">Research goes here:
+                        <a href="assets/html/sensor_research.html">Click</a>
+                    </p>
                 </div>
             </div>
         </div>
