Adjusted folder locations

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <title>James Buck - PROG272</title>
     <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" type="text/css" />
     <!-- Google fonts-->
@@ -41,7 +41,7 @@
     <section class="showcase">
         <div class="container-fluid p-0">
             <div class="row g-0">
-                <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('assets/img/James_profile_photo.jpg')"></div>
+                <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('img/James_profile_photo.jpg')"></div>
                 <div class="col-lg-6 order-lg-1 my-auto showcase-text">
                     <h2>My Profile</h2>
                     <p class="lead mb-0">james.buck at bellevuecollege dot edu
@@ -52,11 +52,11 @@
                 </div>
             </div>
             <div class="row g-0">
-                <div class="col-lg-6 text-white showcase-img" style="background-image: url('assets/img/android-phonejpg.jpg')"></div>
+                <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/android-phonejpg.jpg')"></div>
                 <div class="col-lg-6 my-auto showcase-text">
                     <h2>Sensor Research</h2>
                     <p class="lead mb-0">Research goes here:
-                        <a href="assets/html/sensor_research.html">Click</a>
+                        <a href="html/sensor_research.html">Click</a>
                     </p>
                 </div>
             </div>
