Added link from home page

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
                 <div class="col-lg-6 text-white showcase-img" style="background-image: url('img/android-phonejpg.jpg')"></div>
                 <div class="col-lg-6 my-auto showcase-text">
                     <h2>Sensor Research</h2>
-                    <p class="lead mb-0">Research goes here:
-                        <a href="html/sensor_research.html">Click</a>
+                    <p class="lead mb-0">My research is
+                        <a href="html/sensor_research.html">here</a>.
                     </p>
                 </div>
             </div>
